--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
           <a href="#" class="button main-info__button">
             <span class="button__text">Читать далее</span>
-            <img src="img/main/Button-Arrow.svg" alt="Иконка: стрелка" class="button__arrow">
+            <img src="img/Button-Arrow.svg" alt="Иконка: стрелка" class="button__arrow">
           </a>
         </div>
         <div class="main-info__right">
@@ -202,6 +202,16 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="promo">
+    <div class="promo-wrapper">
+      <h2 class="promo__title">Расследование недели: сколько зарабатывает веб разработчик в Москве</h2>
+      <a href="#" class="button promo__button">
+        <span class="button__text">Читать статью</span>
+        <img src="img/Button-Arrow.svg" alt="Иконка: вперед" class="button__arrow">
+      </a>
     </div>
   </section>
 
