--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             <img src="img/header/Search-icon.svg" alt="Иконка: поиск">
           </button>
         </form>
+        <button class="menu-button header-nav__menu-button">
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
+        </button>
       </div>
     </div>
   </header>
@@ -45,37 +50,46 @@
               <span class="main-info__text">Разработчик</span>
             </div>
           </a>
-          <div class="main-info__text-block">
-            <span class="main-info__subtitle">JavaScript</span>
-            <h1 class="main-info__title">Расширение Chrome защищает от атак</h1>
+          <div class="main-info__text-wrapper">
+            <div class="main-info__text-block">
+              <span class="main-info__subtitle">JavaScript</span>
+              <h1 class="main-info__title">Расширение Chrome защищает от атак</h1>
+            </div>
+            <a href="#" class="button main-info__button">
+              <span class="button__text">Читать далее</span>
+              <img src="img/Button-Arrow.svg" alt="Иконка: стрелка" class="button__arrow">
+            </a>
           </div>
-          <a href="#" class="button main-info__button">
-            <span class="button__text">Читать далее</span>
-            <img src="img/Button-Arrow.svg" alt="Иконка: стрелка" class="button__arrow">
-          </a>
         </div>
         <div class="main-info__right">
           <div class="main-info__recommend">
             <h2 class="main-info__recommend-title">Рекомендуем</h2>
-            <div class="main-info__tab">
-              <h3 class="main-info__tab-title main-info__tab-title_css">Css</h3>
-              <p class="main-info__tab-text">Как использовать <span class="main-info__tab-text_uppercase">css</span> float после того, как вышел Flexbox</p>
-            </div>
-            <div class="main-info__tab">
-              <h3 class="main-info__tab-title main-info__tab-title_js">JavaScript</h3>
-              <p class="main-info__tab-text">На каком стандарте писать скрипты, если я фрилансер</p>
-            </div>
-            <div class="main-info__tab">
-              <h3 class="main-info__tab-title main-info__tab-title_html">Html</h3>
-              <p class="main-info__tab-text">Правильно вставляем картинку на сайт для Retina дисплея</p>
-            </div>
-            <div class="main-info__tab">
-              <h3 class="main-info__tab-title main-info__tab-title_web">Web Design</h3>
-              <p class="main-info__tab-text"><span class="main-info__tab-text_uppercase">Топ</span>-10 плагинов для Figma</p>
-            </div>
-            <div class="main-info__tab">
-              <h3 class="main-info__tab-title main-info__tab-title_css-green">Css</h3>
-              <p class="main-info__tab-text">Возможности <span class="main-info__tab-text_uppercase">Css</span> Grid Layout, которые уже можно применять</p>
+          </div>
+          <div class="main-info__tabs-wrapper">
+            <div class="main-info__tabs">
+              <div class="main-info__tab">
+                <h3 class="main-info__tab-title main-info__tab-title_css">Css</h3>
+                <p class="main-info__tab-text">Как использовать <span class="main-info__tab-text_uppercase">css</span> float после
+                  того, как вышел Flexbox</p>
+              </div>
+              <div class="main-info__tab">
+                <h3 class="main-info__tab-title main-info__tab-title_js">JavaScript</h3>
+                <p class="main-info__tab-text">На каком стандарте писать скрипты, если я фрилансер</p>
+              </div>
+              <div class="main-info__tab">
+                <h3 class="main-info__tab-title main-info__tab-title_html">Html</h3>
+                <p class="main-info__tab-text">Правильно вставляем картинку на сайт для Retina дисплея</p>
+              </div>
+              <div class="main-info__tab">
+                <h3 class="main-info__tab-title main-info__tab-title_web">Web Design</h3>
+                <p class="main-info__tab-text"><span class="main-info__tab-text_uppercase">Топ</span>-10 плагинов для Figma</p>
+              </div>
+              <div class="main-info__tab">
+                <h3 class="main-info__tab-title main-info__tab-title_css-green">Css</h3>
+                <p class="main-info__tab-text">Возможности <span class="main-info__tab-text_uppercase">Css</span> Grid Layout,
+                  которые
+                  уже можно применять</p>
+              </div>
             </div>
           </div>
         </div>
