--- a/index.html
+++ b/index.html
@@ -14,16 +14,26 @@
         <a href="#" class="header__logo">
           <img src="img/header/main-logo.svg" alt="Universal" class="header-nav__logo">
         </a>
-        <ul class="header-nav__ul">
-          <li class="header-nav__item"><a href="#" class="header-nav__link">Статьи</a></li>
-          <li class="header-nav__item"><a href="#" class="header-nav__link">Новости</a></li>
-          <li class="header-nav__item"><a href="#" class="header-nav__link">Курсы</a></li>
-          <li class="header-nav__item"><a href="#" class="header-nav__link">HTML</a></li>
-          <li class="header-nav__item"><a href="#" class="header-nav__link">CSS</a></li>
-          <li class="header-nav__item"><a href="#" class="header-nav__link">JavaScript</a></li>
-          <li class="header-nav__item"><a href="#" class="header-nav__link">Web Design</a></li>
-        </ul>
-        <form action="#" class="header-nav__search">
+        <div class="header__wrapper header__wrapper_mobile">
+          <ul class="header-nav__ul header-nav__ul_mobile_visible">
+            <li class="header-nav__item_mobile_visible">
+              <form action="#" class="header-nav__search">
+                <input type="text" class="header-nav__input" placeholder="Поиск">
+                <button class="header-nav__button">
+                  <img src="img/header/Search-icon.svg" alt="Иконка: поиск">
+                </button>
+              </form>
+            </li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link">Статьи</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link">Новости</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link">Курсы</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link">HTML</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link">CSS</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link">JavaScript</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link">Web Design</a></li>
+          </ul>
+          </div>
+        <form action="#" class="header-nav__search header-nav__search_mobile_hidden">
           <input type="text" class="header-nav__input" placeholder="Поиск">
           <button class="header-nav__button">
             <img src="img/header/Search-icon.svg" alt="Иконка: поиск">
@@ -228,6 +238,9 @@
       </a>
     </div>
   </section>
+
+  <script src="js/jquery-3.5.1.min.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
