--- a/index.html
+++ b/index.html
@@ -239,6 +239,208 @@
     </div>
   </section>
 
+  <section class="news">
+    <div class="container">
+      <div class="news__wrapper">
+        <div class="news__left">
+          <div class="news__card">
+            <img src="img/news/photo-large-1.png" alt="Новости" class="news__card-image">
+            <div class="news__card-text">
+              <span class="news__card-subtitle news__card-subtitle_blue">Новости</span>
+              <h2 class="news__card-title">Новый налоговый режим для фрилансеров — налог на проф. доход</h2>
+              <p class="news__card-description">Руководитель налоговой заявил, что этот режим “поможет выйти из тени” тем, кто работает неофициально. Разобрались, как
+              работает режим и кому он подходит, а кому нет.</p>
+              <div class="news__card-bottom">
+                <span class="date news__card-date">6 августа</span>
+                <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">342</span>
+                <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">830</span>
+              </div>
+                <div class="flag news__card-flag">
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                    xmlns="http://www.w3.org/2000/svg" cure>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="currentColor" />
+                  </svg>
+                </div>
+            </div>
+          </div>
+          <div class="news__card">
+            <img src="img/news/photo-large-2.png" alt="Мнения" class="news__card-image">
+            <div class="news__card-text">
+              <span class="news__card-subtitle news__card-subtitle_bluegreen">Мнения</span>
+              <h2 class="news__card-title">Платные курсы — это не быстрый способ выйти на нужный уровень</h2>
+              <p class="news__card-description">Среди новичков распространено мнение, что если пройти какой-то крутой онлайн-курс, то это решит все проблемы. Но они не
+              берут в расчет, что лучшее обучение — это практика.</p>
+              <div class="news__card-bottom">
+                <span class="date news__card-date">6 августа</span>
+                <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">342</span>
+                <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">830</span>
+              </div>
+                <div class="flag news__card-flag">
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" cure>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="currentColor" />
+                  </svg>
+                </div>
+            </div>
+          </div>
+          <div class="news__card">
+            <img src="img/news/photo-large-3.png" alt="Горячее" class="news__card-image">
+            <div class="news__card-text">
+              <span class="news__card-subtitle news__card-subtitle_red">Горячее</span>
+              <h2 class="news__card-title">Из-за ограничений стали недоступны серверы Telegram. К чему это может...</h2>
+              <p class="news__card-description">Сегодня мы узнали, что серверы Telegram не доступны на территории России. Разобрались, чем это грозит вам, если ваш
+              бизнес зависит от этого мессенджера.</p>
+              <div class="news__card-bottom">
+                <span class="date news__card-date">6 августа</span>
+                <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">342</span>
+                <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">830</span>
+              </div>
+                <div class="flag news__card-flag">
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" cure>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="currentColor" />
+                  </svg>
+                </div>
+            </div>
+          </div>
+          <div class="news__card">
+            <img src="img/news/photo-large-4.png" alt="Мнения" class="news__card-image">
+            <div class="news__card-text">
+              <span class="news__card-subtitle news__card-subtitle_bluegreen">Мнения</span>
+              <h2 class="news__card-title">В вашем портфолио могут быть фейковые проекты, если вы сделали...</h2>
+              <p class="news__card-description">Один из читателей предположил, что если в портфолио положить несуществующий проект, то ничего страшного не произойдет.
+              Он провел эксперимент и потенциальные заказчики...</p>
+              <div class="news__card-bottom">
+                <span class="date news__card-date">6 августа</span>
+                <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">342</span>
+                <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">830</span>
+              </div>
+                <div class="flag news__card-flag">
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" cure>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="currentColor" />
+                  </svg>
+                </div>
+            </div>
+          </div>
+          <div class="news__card">
+            <img src="img/news/photo-large-5.png" alt="Горячее" class="news__card-image">
+            <div class="news__card-text">
+              <span class="news__card-subtitle news__card-subtitle_red">Горячее</span>
+              <h2 class="news__card-title">Список стран, куда можно улететь</h2>
+              <p class="news__card-description">Если вы приняли решение переехать в другую страну, чтобы найти там работу, сначала посмотрите на список стран, который
+              мы подготовили для вас. Внутри важная информация про...</p>
+              <div class="news__card-bottom">
+                <span class="date news__card-date">6 августа</span>
+                <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">342</span>
+                <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">830</span>
+              </div>
+                <div class="flag news__card-flag">
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" cure>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="currentColor" />
+                  </svg>
+                </div>
+            </div>
+          </div>
+          <div class="news__card">
+            <img src="img/news/photo-large-6.png" alt="Подборки" class="news__card-image">
+            <div class="news__card-text">
+              <span class="news__card-subtitle news__card-subtitle_purple">Подборки</span>
+              <h2 class="news__card-title">Список Youtube каналов для тех, кто только начинает изучать разработку</h2>
+              <p class="news__card-description">Мы собрали на одной странице кучу ссылок на полезные русскоязычные каналы, посвященные айти. Тут можно найти видеоуроки,
+              лекции и бесплатные курсы.</p>
+              <div class="news__card-bottom">
+                <span class="date news__card-date">6 августа</span>
+                <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">342</span>
+                <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon">
+                <span class="numbers news__card-numbers">830</span>
+              </div>
+                <div class="flag news__card-flag">
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" cure>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="currentColor" />
+                  </svg>
+                </div>
+            </div>
+          </div>
+        </div>
+        <aside class="news__right">
+          <h2 class="news__title">Недавно опубликовано</h2>
+            <div class="news__post">
+              <img src="img/news/photo-small-1.png" alt="Работа на удаленке" class="news__post-image">
+              <div class="news__post-text">
+                <h3 class="news__post-title">Работа на удаленке, как это теперь</h3>
+                <span class="time news__post-time">15 минут назад</span>
+              </div>
+              <img src="/img/news/1.svg" alt="1" class="news__post-icon">
+            </div>
+            <div class="news__post">
+              <img src="img/news/photo-small-2.png" alt="Работа на удаленке" class="news__post-image">
+              <div class="news__post-text">
+                <h3 class="news__post-title">Для чего нужен Node.js и с чем...</h3>
+                <span class="time news__post-time">32 минуты назад</span>
+              </div>
+              <img src="/img/news/2.svg" alt="2" class="news__post-icon">
+            </div>
+            <div class="news__post">
+              <img src="img/news/photo-small-3.png" alt="Работа на удаленке" class="news__post-image">
+              <div class="news__post-text">
+                <h3 class="news__post-title">Работа в Google: собеседования и...</h3>
+                <span class="time news__post-time">38 минут назад</span>
+              </div>
+              <img src="/img/news/3.svg" alt="3" class="news__post-icon">
+            </div>
+            <div class="news__post">
+              <img src="img/news/photo-small-4.png" alt="Работа на удаленке" class="news__post-image">
+              <div class="news__post-text">
+                <h3 class="news__post-title">Переезд в Нью Йорк для работы по...</h3>
+                <span class="time news__post-time">53 минуты назад</span>
+              </div>
+              <img src="/img/news/4.svg" alt="4" class="news__post-icon">
+            </div>
+            <div class="news__post">
+              <img src="img/news/photo-small-5.png" alt="Работа на удаленке" class="news__post-image">
+              <div class="news__post-text">
+                <h3 class="news__post-title">Почему родители против того, чтобы...</h3>
+                <span class="time news__post-time">1 час назад</span>
+              </div>
+              <img src="/img/news/5.svg" alt="5" class="news__post-icon">
+            </div>
+            <div class="news__post">
+              <img src="img/news/photo-small-6.png" alt="Работа на удаленке" class="news__post-image">
+              <div class="news__post-text">
+                <h3 class="news__post-title">Прокрастинация: побороть отклады...</h3>
+                <span class="time news__post-time">1 час назад</span>
+              </div>
+              <img src="/img/news/6.svg" alt="6" class="news__post-icon">
+            </div>
+            <div class="news__post">
+              <img src="img/news/photo-small-7.png" alt="Работа на удаленке" class="news__post-image">
+              <div class="news__post-text">
+                <h3 class="news__post-title">Правки от заказчика могут быть...</h3>
+                <span class="time news__post-time">2 часа назад</span>
+              </div>
+              <img src="/img/news/7.svg" alt="7" class="news__post-icon">
+            </div>
+            <button class="news__post-button">Read more</button>
+        </aside>
+      </div>
+    </div>
+  </section>
+
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/main.js"></script>
 
