--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Universal</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -441,7 +442,33 @@
     </div>
   </section>
 
+  <section class="other-articles">
+    <div class="container">
+      <div class="other-articles__wrapper">
+        <div class="photo">
+          <!-- Slider main container -->
+          <div class="swiper-container photo-slider photo__slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide photo-slider__item">Slide 1</div>
+              <div class="swiper-slide photo-slider__item">Slide 2</div>
+              <div class="swiper-slide photo-slider__item">Slide 3</div>
+              <div class="swiper-slide photo-slider__item">Slide 4</div>
+              <div class="swiper-slide photo-slider__item">Slide 5</div>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination "></div>
+          
+          </div>
+        </div>
+        <div class="other-articles__cards"></div>
+      </div>
+    </div>
+  </section>
+
   <script src="js/jquery-3.5.1.min.js"></script>
+  <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 
 </body>
