refact: upgrade news to pp

--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@
               <p class="news__card-description">Среди новичков распространено мнение, что если пройти какой-то крутой онлайн-курс, то это решит все проблемы. Но они не
               берут в расчет, что лучшее обучение — это практика.</p>
               <div class="news__card-bottom">
-                <span class="date news__card-date">6 августа</span>
+                <span class="date news__card-date">7 октября</span>
                 <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon">
-                <span class="numbers news__card-numbers">342</span>
+                <span class="numbers news__card-numbers">27</span>
                 <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon">
-                <span class="numbers news__card-numbers">830</span>
+                <span class="numbers news__card-numbers">129</span>
               </div>
                 <div class="flag news__card-flag">
                   <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -297,11 +297,11 @@
               <p class="news__card-description">Сегодня мы узнали, что серверы Telegram не доступны на территории России. Разобрались, чем это грозит вам, если ваш
               бизнес зависит от этого мессенджера.</p>
               <div class="news__card-bottom">
-                <span class="date news__card-date">6 августа</span>
+                <span class="date news__card-date">12 декабря</span>
                 <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon">
-                <span class="numbers news__card-numbers">342</span>
+                <span class="numbers news__card-numbers">30</span>
                 <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon">
-                <span class="numbers news__card-numbers">830</span>
+                <span class="numbers news__card-numbers">284</span>
               </div>
                 <div class="flag news__card-flag">
                   <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -319,11 +319,11 @@
               <p class="news__card-description">Один из читателей предположил, что если в портфолио положить несуществующий проект, то ничего страшного не произойдет.
               Он провел эксперимент и потенциальные заказчики...</p>
               <div class="news__card-bottom">
-                <span class="date news__card-date">6 августа</span>
+                <span class="date news__card-date">20 июля</span>
                 <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon">
-                <span class="numbers news__card-numbers">342</span>
+                <span class="numbers news__card-numbers">102</span>
                 <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon">
-                <span class="numbers news__card-numbers">830</span>
+                <span class="numbers news__card-numbers">1,293</span>
               </div>
                 <div class="flag news__card-flag">
                   <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -340,12 +340,12 @@
               <a href="#" class="news__card-link"><h2 class="news__card-title">Список стран, куда можно улететь</h2></a>
               <p class="news__card-description">Если вы приняли решение переехать в другую страну, чтобы найти там работу, сначала посмотрите на список стран, который
               мы подготовили для вас. Внутри важная информация про...</p>
-              <div class="news__card-bottom">
-                <span class="date news__card-date">6 августа</span>
-                <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon">
-                <span class="numbers news__card-numbers">342</span>
-                <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon">
-                <span class="numbers news__card-numbers">830</span>
+              <div class="news__card-bottom_contry">
+                <span class="date news__card-date news__card-date_contry">22 октября</span>
+                <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon news__card-icon_contry">
+                <span class="numbers news__card-numbers news__card-numbers_contry">5</span>
+                <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon news__card-icon_contry">
+                <span class="numbers news__card-numbers news__card-numbers_contry">82</span>
               </div>
                 <div class="flag news__card-flag">
                   <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -363,11 +363,11 @@
               <p class="news__card-description">Мы собрали на одной странице кучу ссылок на полезные русскоязычные каналы, посвященные айти. Тут можно найти видеоуроки,
               лекции и бесплатные курсы.</p>
               <div class="news__card-bottom">
-                <span class="date news__card-date">6 августа</span>
+                <span class="date news__card-date">26 октября</span>
                 <img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon">
-                <span class="numbers news__card-numbers">342</span>
+                <span class="numbers news__card-numbers">101</span>
                 <img src="img/articles/heart.svg" alt="Иконка" class="news__card-icon">
-                <span class="numbers news__card-numbers">830</span>
+                <span class="numbers news__card-numbers">432</span>
               </div>
                 <div class="flag news__card-flag">
                   <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
