create: added other articles section and style

--- a/index.html
+++ b/index.html
@@ -451,18 +451,69 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <div class="swiper-slide photo-slider__item">Slide 1</div>
-              <div class="swiper-slide photo-slider__item">Slide 2</div>
-              <div class="swiper-slide photo-slider__item">Slide 3</div>
-              <div class="swiper-slide photo-slider__item">Slide 4</div>
-              <div class="swiper-slide photo-slider__item">Slide 5</div>
+              <div class="swiper-slide photo-slider__item">
+                <img src="img/other-articles/slider-1.jpg" alt="Фото" class="photo-slider__image">
+              </div>
+              <div class="swiper-slide photo-slider__item">
+                <img src="img/news/photo-large-1.png" alt="Фото" class="photo-slider__image">
+              </div>
+              <div class="swiper-slide photo-slider__item">
+                <img src="img/news/photo-large-2.png" alt="Фото" class="photo-slider__image">
+              </div>
+              <div class="swiper-slide photo-slider__item">
+                <img src="img/news/photo-large-3.png" alt="Фото" class="photo-slider__image">
+              </div>
+              <div class="swiper-slide photo-slider__item">
+                <img src="img/news/photo-large-4.png" alt="Фото" class="photo-slider__image">
+              </div>
             </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination "></div>
-          
+          </div>
+          <!-- If we need pagination -->
+          <div class="photo__pagination"></div>
+          <div class="photo-slider__wrapper">
+            <div class="photo-slider__text">
+              <div class="photo-slider__profile">
+                <img src="img/other-articles/avatar.png" alt="Аватар" class="photo-slider__avatar">
+                <span class="photo-slider__username">Оксана Пушкина</span>
+                <span class="photo-slider__subtitle">Фотограф</span>
+              </div>
+              <h2 class="photo-slider__title">Выбор читателей: где удобнее работать фрилансеру</h2>
+              <button class="button photo-slider__button">
+                <img src="img/other-articles/Images.svg" alt="Иконка" class="photo-slider__icon">
+                <span class="photo-slider__button-text">Смотреть фото</span>
+                <span class="photo-slider__button-text photo-slider__button-text_numbers">26</span>
+              </button>
+            </div>
+          </div>
+          <span class="photo-slider__label">Горячее</span>
+        </div>
+        <div class="other-articles__cards">
+          <div class="other-articles__card">
+            <div class="other-articles__card-text">
+              <span class="other-articles__card-subtitle">Карьера</span>
+              <h2 class="other-articles__card-title">Вопросы на собеседовании для джуна</h2>
+              <p class="other-articles__card-description">Каверзные и не очень вопросы, которых боятся новички, когда идут на собеседование</p>
+              <a href="#" class="button other-articles__button">
+                <span class="other-articles__button-text">Читать далее</span>
+                <img src="img/Button-Arrow.svg" alt="Иконка" class="other-articles__button-icon">
+              </a>
+            </div>
+          </div>
+          <div class="other-articles__card_small">
+            <div class="other-articles__card-text_small">
+              <h2 class="other-articles__card-title_small">Зарядка для глаз</h2>
+              <p class="other-articles__card-description_small">Эти несколько упражнений помогут сохранить зрение. Можно делать их даже если...</p>
+              <span class="date other-articles__card-date">15 октября</span>
+            </div>
+          </div>
+          <div class="other-articles__card_small">
+            <div class="other-articles__card-text_small">
+              <h2 class="other-articles__card-title_small">Топ плагинов jQuery</h2>
+              <p class="other-articles__card-description_small">Какие плагины помогут быстро создать галерею, выпадающие списки или окна</p>
+              <span class="date other-articles__card-date">14 октября</span>
+            </div>
           </div>
         </div>
-        <div class="other-articles__cards"></div>
       </div>
     </div>
   </section>
