create: added footer section style

--- a/index.html
+++ b/index.html
@@ -519,15 +519,17 @@
 
   <footer class="footer">
     <div class="container">
-      <h2 class="footer__title">Подпишитесь на нашу рассылку</h2>
-      <form action="#" class="footer__form">
-        <input type="email" class="footer__input" placeholder="Email">
-        <button class="button footer__button">
-          <span class="footer__button-text">Подписаться</span>
-        </button>
-      </form>
+      <div class="footer-top">
+        <h2 class="footer__title">Подпишитесь на нашу рассылку</h2>
+        <form action="#" class="footer__form">
+          <input type="email" class="footer__input" placeholder="Email">
+          <button class="button footer__button">
+            <span class="footer__button-text">Подписаться</span>
+          </button>
+        </form>
+      </div>
       <div class="footer-grid">
-        <div class="footer-grid__wrapper">
+        <div class="footer-grid__wrapper footer-grid__wrapper_red">
           <h3 class="footer-grid__title">Новости</h3>
           <ul class="footer-grid__ul">
             <li class="footer-grid__item"><a href="#" class="footer-grid__link">Обновления</a></li>
@@ -536,7 +538,7 @@
             <li class="footer-grid__item"><a href="#" class="footer-grid__link">Solar Eclipse</a></li>
           </ul>
         </div>
-        <div class="footer-grid__wrapper">
+        <div class="footer-grid__wrapper footer-grid__wrapper_purple">
           <h3 class="footer-grid__title">Статьи</h3>
           <ul class="footer-grid__ul">
             <li class="footer-grid__item"><a href="#" class="footer-grid__link">HTML</a></li>
@@ -545,7 +547,7 @@
             <li class="footer-grid__item"><a href="#" class="footer-grid__link">Web Design</a></li>
           </ul>
         </div>
-        <div class="footer-grid__wrapper">
+        <div class="footer-grid__wrapper footer-grid__wrapper_blue">
           <h3 class="footer-grid__title">Видеоуроки</h3>
           <ul class="footer-grid__ul">
             <li class="footer-grid__item"><a href="#" class="footer-grid__link">Скринкасты</a></li>
@@ -553,7 +555,7 @@
             <li class="footer-grid__item"><a href="#" class="footer-grid__link">Вебинары</a></li>
           </ul>
         </div>
-        <div class="footer-grid__wrapper">
+        <div class="footer-grid__wrapper footer-grid__wrapper_orange">
           <h3 class="footer-grid__title">Курсы</h3>
           <ul class="footer-grid__ul">
             <li class="footer-grid__item"><a href="#" class="footer-grid__link">Платные интенсивы</a></li>
@@ -563,7 +565,7 @@
             <li class="footer-grid__item"><a href="#" class="footer-grid__link">Буткемпы</a></li>
           </ul>
         </div>
-        <div class="footer-grid__wrapper">
+        <div class="footer-grid__wrapper footer-grid__wrapper_green">
           <h3 class="footer-grid__title">Информация</h3>
           <ul class="footer-grid__ul">
             <li class="footer-grid__item"><a href="#" class="footer-grid__link">Политика данных</a></li>
@@ -572,7 +574,7 @@
             <li class="footer-grid__item"><a href="#" class="footer-grid__link">Контакты</a></li>
           </ul>
         </div>
-        <div class="footer-grid__wrapper">
+        <div class="footer-grid__wrapper footer-grid__wrapper_greyblue">
           <h3 class="footer-grid__title">Категории</h3>
           <ul class="footer-grid__ul">
             <li class="footer-grid__item"><a href="#" class="footer-grid__link">Популярное</a></li>
@@ -584,7 +586,7 @@
         </div>
       </div>
       <div class="footer-links">
-        <img src="img/footer/footer-logo.svg" alt="Логотип" class="footer-links__logo">
+        <a href="#" class="footer-links__link"><img src="img/footer/footer-logo.svg" alt="Логотип" class="footer-links__logo"></a>
         <ul class="footer-links__ul">
           <li class="footer-links__item"><a href="#" class="footer-links__link">Контакты</a></li>
           <li class="footer-links__item"><a href="#" class="footer-links__link">Работа у нас</a></li>
