--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="container">
       <div class="header-nav">
-        <a href="/index.html" class="header__logo">
+        <a href="/universal" class="header__logo">
           <img src="img/header/main-logo.svg" alt="Universal" class="header-nav__logo">
         </a>
         <div class="header__wrapper header__wrapper_mobile">
@@ -586,7 +586,7 @@
         </div>
       </div>
       <div class="footer-links">
-        <a href="/index.html" class="footer-links__link"><img src="img/footer/footer-logo.svg" alt="Логотип" class="footer-links__logo"></a>
+        <a href="/universal" class="footer-links__link"><img src="img/footer/footer-logo.svg" alt="Логотип" class="footer-links__logo"></a>
         <ul class="footer-links__ul">
           <li class="footer-links__item"><a href="#" class="footer-links__link">Контакты</a></li>
           <li class="footer-links__item"><a href="#" class="footer-links__link">Работа у нас</a></li>
