--- a/article.html
+++ b/article.html
@@ -251,6 +251,12 @@
       </div>
   </article>
 
+  <section class="cards">
+    <div class="container">
+      <div class="cards__wrapper"></div>
+    </div>
+  </section>
+
   <footer class="footer">
     <div class="container">
       <div class="footer-top">
