create: added link to button

--- a/send-message.html
+++ b/send-message.html
@@ -52,7 +52,7 @@
   <section class="thanks">
     <div class="container">
       <h1 class="thanks__title">Сообщение отправлено</h1>
-      <a href="/universal" class="button thanks__button">Назад</a>
+      <a href="/universal/article.html" class="button thanks__button">Назад</a>
     </div>
   </section>
 
